tests/derive_ui/struct_subcommand.stderr
error: `subcommand` cannot be used with `command`
  --> tests/derive_ui/struct_subcommand.rs:12:27
   |
12 | #[command(name = "basic", subcommand)]
   |                           ^^^^^^^^^^
